Fixing bug 341897, show bookmarks/history should make a new window when window is minimized. Patch by froodian <stridey@gmail.com>, r=smorgan, sr=pink