camino/src/application/MainController.mm
@@ -1240,7 +1240,10 @@ Otherwise, we return the URL we originally got. Right now this supports .url,
 -(IBAction) showHistory:(id)aSender
 {
   NSWindow* browserWindow = [self getFrontmostBrowserWindow];
-  if (!browserWindow) {
+  if (browserWindow) {
+    if (![browserWindow isMainWindow])
+      [browserWindow makeKeyAndOrderFront:self];
+  } else {
     [self newWindow:self];
     browserWindow = [mApplication mainWindow];
   }
@@ -1276,7 +1279,10 @@ Otherwise, we return the URL we originally got. Right now this supports .url,
 -(IBAction)manageBookmarks:(id)aSender
 {
   NSWindow* browserWindow = [self getFrontmostBrowserWindow];
-  if (!browserWindow) {
+  if (browserWindow) {
+    if (![browserWindow isMainWindow])
+      [browserWindow makeKeyAndOrderFront:self];
+  } else {
     [self newWindow:self];
     browserWindow = [mApplication mainWindow];
   }
